--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>in.ravikalla.onlineacc</groupId>
-	<artifactId>externalbank</artifactId>
+	<artifactId>ExternalAudit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>onlineaccount-external-virtualization-site</name>
-	<description>External Bank app for Virtualization demo of OnlineAccount application</description>
+	<description>External Audit app for Virtualization demo of OnlineAccount application</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -34,6 +34,11 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 	</dependencies>
 
